# razer

./: .gitignore  CMakeLists.txt  README.md
docs/plans/: 2026-03-04-librazerd-design.md  2026-03-04-librazerd.md  2026-03-05-razerd-c23-ui-backends-design.md
librazer/: CMakeLists.txt  hw_abyssus.c  hw_abyssus.h  hw_basilisk.c  hw_basilisk.h  hw_chroma_extended.c  hw_chroma_extended.h  hw_deathadder_elite.c  hw_deathadder_elite.h  hw_deathadder_essential.c  hw_deathadder_essential.h  hw_deathadder_v2.c  hw_deathadder_v2.h  hw_lancehead.c  hw_lancehead.h  hw_mamba_wireless.c  hw_mamba_wireless.h  hw_naga_v2.c  hw_naga_v2.h  hw_orochi.c  hw_orochi.h  hw_viper.c  hw_viper.h  librazer.c  librazer.h
librazerd/: CMakeLists.txt  fuzz_librazerd.c  librazerd.c  librazerd.h  test_librazerd.c
librazerd/fuzz/in/: seed_ascii  seed_utf8
razerd/: CMakeLists.txt  razerd.c
scripts/: cmake.global
ui/: CMakeLists.txt
ui/c/: CMakeLists.txt  razercfg.c
ui/common/: crash.h
ui/gtk/: CMakeLists.txt  buttonspanel.c  buttonspanel.h  dpipanel.c  dpipanel.h  freqpanel.c  freqpanel.h  ledpanel.c  ledpanel.h  main.c  mainwindow.c  mainwindow.h  profilepanel.c  profilepanel.h
ui/python/: CMakeLists.txt
ui/python/pyrazer/: main.py  ui.py
ui/qt/: CMakeLists.txt  buttonstab.cpp  buttonstab.h  dpitab.cpp  dpitab.h  freqtab.cpp  freqtab.h  ledtab.cpp  ledtab.h  main.cpp  mainwindow.cpp  mainwindow.h  profiletab.cpp  profiletab.h
